collections form design

--- a/.env
+++ b/.env
@@ -5,5 +5,7 @@
 # https://sheetdb.io/api/v1/gm07kqit95tmt
 # 5021iys8xbbnnikkwiw7zsquqto5j7lo2u37hiw8
 
-NEXT_PUBLIC_TOKEN="rdflhu4j5rwr1i5uv68dkxfso4cuy7quz3o3puum"
-NEXT_PUBLIC_URL="https://sheetdb.io/api/v1/7ff55d2lxc4hr"
+# NEXT_PUBLIC_TOKEN="rdflhu4j5rwr1i5uv68dkxfso4cuy7quz3o3puum"
+# NEXT_PUBLIC_URL="https://sheetdb.io/api/v1/7ff55d2lxc4hr"
+NEXT_PUBLIC_URL_USERS="https://6310b713826b98071a48cd49.mockapi.io/api/collectit/users"
+NEXT_PUBLIC_URL="https://64ef8878219b3e2873c49be4.mockapi.io/api/collectit"
