--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-adapty": "^2.6.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-modal-datetime-picker": "^17.1.0",
@@ -32,7 +33,9 @@
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "uid": "^2.0.2",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
