--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.72.4",
     "react-native-adapty": "^2.6.0",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dialog": "^9.3.0",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-easy-grid": "^0.2.2",
     "react-native-element-dropdown": "^2.10.0",
